--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-stepper" version="0.1.4">
     <name>Stepper</name>
-    <author>Alexandr Chubutkin</author>
+    <author>Felicien Francois</author>
     <description>Lightweight pedometer Cordova/Phonegap plugin for Android using the hardware step sensor, with notifications.</description>
     <keywords>cordova, core motion, pedometer, steps, distance, pedestrian</keywords>
     <license>MIT</license>
