--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="@felicienfrancois/cordova-plugin-stepper" version="0.1.4">
+<plugin id="@felicienfrancois/cordova-plugin-stepper"
+    xmlns="http://apache.org/cordova/ns/plugins/1.0"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    version="0.2.2">
     <name>Stepper</name>
     <author>Felicien Francois</author>
     <description>Lightweight pedometer Cordova/Phonegap plugin for Android using the hardware step sensor, with notifications.</description>
@@ -49,6 +52,7 @@
             <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
             <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
             <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+            <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
             <uses-feature android:name="android.hardware.sensor.stepcounter" />
         </config-file>
         <config-file target="res/xml/config.xml" parent="/*">
