--- a/plugin.xml
+++ b/plugin.xml
@@ -32,14 +32,14 @@
     </platform>
     <platform name="android">
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <receiver android:name="org.apache.cordova.stepper.BootReceiver">
+            <receiver android:name="org.apache.cordova.stepper.BootReceiver" android:exported="true">
                 <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <category android:name="android.intent.category.DEFAULT" />
                 </intent-filter>
             </receiver>
-            <receiver android:name="org.apache.cordova.stepper.AppUpdatedReceiver">
+            <receiver android:name="org.apache.cordova.stepper.AppUpdatedReceiver" android:exported="true">
                 <intent-filter>
                     <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
                 </intent-filter>
