--- a/plugin.xml
+++ b/plugin.xml
@@ -58,10 +58,10 @@
         </config-file>
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Stepper">
-                <param name="android-package" value="org.apache.cordova.stepper.PedoListener" />
+                <param name="android-package" value="org.apache.cordova.stepper.StepperPlugin" />
             </feature>
         </config-file>
-        <source-file src="src/android/PedoListener.java" target-dir="src/org/apache/cordova/stepper" />
+        <source-file src="src/android/StepperPlugin.java" target-dir="src/org/apache/cordova/stepper" />
         <source-file src="src/android/AppUpdatedReceiver.java" target-dir="src/org/apache/cordova/stepper" />
         <source-file src="src/android/BootReceiver.java" target-dir="src/org/apache/cordova/stepper" />
         <source-file src="src/android/Database.java" target-dir="src/org/apache/cordova/stepper" />
@@ -71,6 +71,8 @@
         <source-file src="src/android/util/API26Wrapper.java" target-dir="src/org/apache/cordova/stepper/util" />
         <source-file src="src/android/util/Logger.java" target-dir="src/org/apache/cordova/stepper/util" />
         <source-file src="src/android/util/Util.java" target-dir="src/org/apache/cordova/stepper/util" />
+        <source-file src="src/android/util/Config.java" target-dir="src/org/apache/cordova/stepper/util" />
+        <source-file src="src/android/util/Status.java" target-dir="src/org/apache/cordova/stepper/util" />
         <source-file src="src/android/res/drawable/ic_footsteps_silhouette_variant.xml" target-dir="res/drawable" />
     </platform>
 </plugin>
