--- a/plugin.xml
+++ b/plugin.xml
@@ -66,6 +66,7 @@
         <source-file src="src/android/BootReceiver.java" target-dir="src/org/apache/cordova/stepper" />
         <source-file src="src/android/Database.java" target-dir="src/org/apache/cordova/stepper" />
         <source-file src="src/android/SensorListener.java" target-dir="src/org/apache/cordova/stepper" />
+        <source-file src="src/android/ShutdownReceiver.java" target-dir="src/org/apache/cordova/stepper" />
         <source-file src="src/android/util/API23Wrapper.java" target-dir="src/org/apache/cordova/stepper/util" />
         <source-file src="src/android/util/API26Wrapper.java" target-dir="src/org/apache/cordova/stepper/util" />
         <source-file src="src/android/util/Logger.java" target-dir="src/org/apache/cordova/stepper/util" />
