--- a/plugin.xml
+++ b/plugin.xml
@@ -52,6 +52,7 @@
             <uses-permission android:name="android.permission.WAKE_LOCK" />
             <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
             <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+            <uses-permission android:name="android.permission.FOREGROUND_SERVICE_HEALTH" android:minSdkVersion="34" />
             <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
             <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
             <uses-feature android:name="android.hardware.sensor.stepcounter" android:required="false" />
