--- a/plugin.xml
+++ b/plugin.xml
@@ -44,7 +44,7 @@
                     <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
                 </intent-filter>
             </receiver>
-            <service android:name="org.apache.cordova.stepper.SensorListener" android:exported="true" />
+            <service android:name="org.apache.cordova.stepper.SensorListener" android:exported="true" android:foregroundServiceType="health" />
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.INTERNET" />
